zoom-out bug on mobile layout fixed

--- a/frontend/src/pages/external/LoginPage/login_page.scss
+++ b/frontend/src/pages/external/LoginPage/login_page.scss
@@ -1,5 +1,4 @@
 .page {
-    background-attachment: fixed;
     background-repeat: no-repeat;
     background-image: url(/src/assets/images/loginBg.jpg);
     background-size: cover;
